force-app/main/default/objects/Key_Value_Store__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>Used for the Renewal buttonon the community</description>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>